--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,244 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  box-shadow: 0px 20px 0px rgba(0, 0, 0, 0.07);
+}
+
+.toggle-dark {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  padding-right: 1.3rem;
+  cursor: pointer;
+}
+
+.toggle-dark p {
+  margin-left: 0.3rem;
+}
+
+.loader {
+  width: 60px;
+  height: 60px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 50;
+}
+
+.countries-container {
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+}
+
+.country-card {
+  margin-top: 2rem;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+  width: 17rem;
+  height: 400px;
+  border-radius: 9px;
+}
+
+.country-card img {
+  border-top-left-radius: 9px;
+  border-top-right-radius: 9px;
+  width: 100%;
+  height: 10rem;
+  max-height: 200px;
+}
+
+.country-name h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.card-info {
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.info {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  height: 2rem;
+}
+
+.header--heading {
+  padding-left: 1rem;
+}
+
+.country-info {
+  margin-top: 1.34rem;
+}
+
+.search-button {
+  margin-top: 0.3rem;
+  display: flex;
+  width: 40%;
+  padding: 1rem;
+  border-radius: 10px;
+  align-items: center;
+}
+
+.white-input,
+.dark-input {
+  height: 30px;
+  border: 1px solid white;
+  width: 25vw;
+  padding: 5px;
+  font-family: Poppins;
+  margin-left: 1rem;
+  padding-left: 1rem;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.dark-input::placeholder {
+  color: white;
+}
+
+.region {
+  margin-top: 0.3rem;
+  height: 43px;
+  width: 20vw;
+  padding: 5px;
+  font-family: Poppins;
+  border-radius: 1px;
+  margin-right: 1.8rem;
+  border: 1px solid white;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.search {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.navigate-back {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 7rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  margin-left: 6rem;
+  cursor: pointer;
+  border: 1px solid white;
+  height: 3rem;
+  padding-bottom: 1.2rem;
+  padding-right: 1rem;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+  padding-left: 1rem;
+}
+
+
+
+.selected-container {
+  padding: 15px;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.selected-flag {
+  width: 35%;
+  padding: 1rem;
+}
+
+.selected-container img {
+  height: 50%;
+  width: 100%;
+}
+
+.selected-country-name {
+  padding: 15px;
+  padding-left: 0;
+  font-size: 1.1rem;
+}
+
+.info-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+
+.info-selected {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.selected-country-info-heading {
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+
+.selected-information {
+  line-height: 0.4rem;
+}
+
+.selected-country-info {
+  max-width: 12rem;
+  line-height: 1.1rem;
+  font-size: 0.8rem;
+}
+
+@media (max-width: 991px) {
+  .info-container {
+    gap: 0rem;
+  }
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
