--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,12 @@ code {
   width: 17rem;
   height: 400px;
   border-radius: 9px;
+  cursor: pointer;
+}
+
+.country-card:hover {
+  transform: scale(1.03);
+  transition: all 0.2s;
 }
 
 .country-card img {
@@ -234,6 +240,8 @@ code {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
   background-color: black;
   padding: 5px;
+  cursor: pointer;
+
 }
 
 
